Move researchers avatars from memory to files