@@ -6,6 +6,9 @@ import lab.jee.researcher.repository.api.ResearcherRepository;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -16,9 +19,12 @@ public class ResearcherService {
 
     private final Pbkdf2PasswordHash passwordHash;
 
-    public ResearcherService(ResearcherRepository researcherRepository, Pbkdf2PasswordHash passwordHash) {
+    private final Path avatarDirectory;
+
+    public ResearcherService(ResearcherRepository researcherRepository, Pbkdf2PasswordHash passwordHash, String avatarDirectory) {
         this.researcherRepository = researcherRepository;
         this.passwordHash = passwordHash;
+        this.avatarDirectory = Paths.get(System.getProperty("user.dir").split("target")[0], avatarDirectory);
     }
 
     public Optional<Researcher> find(UUID id) {
@@ -50,21 +56,53 @@ public class ResearcherService {
         researcherRepository.delete(id);
     }
 
-    public void updateAvatar(UUID id, InputStream is) {
-        researcherRepository.find(id).ifPresent(researcher -> {
+    public Optional<byte[]> getAvatar(UUID id) {
+        return researcherRepository.find(id).flatMap(researcher -> {
+            if (researcher.getAvatarPath() == null) {
+                return Optional.empty();
+            }
+            Path filePath = avatarDirectory.resolve(researcher.getAvatarPath());
             try {
-                researcher.setAvatar(is.readAllBytes());
-                researcherRepository.update(researcher);
+                return Optional.of(Files.readAllBytes(filePath));
             } catch (IOException e) {
                 throw new IllegalStateException("Failed to read avatar", e);
             }
         });
     }
 
+    public void updateAvatar(UUID id, InputStream is) {
+        researcherRepository.find(id).ifPresent(researcher -> {
+            try {
+                String fileName = id.toString() + ".png";
+                Path filePath = avatarDirectory.resolve(fileName);
+
+                if (researcher.getAvatarPath() != null) {
+                    Path oldFilePath = avatarDirectory.resolve(researcher.getAvatarPath());
+                    Files.deleteIfExists(oldFilePath);
+                }
+
+                Files.copy(is, filePath);
+
+                researcher.setAvatarPath(fileName);
+                researcherRepository.update(researcher);
+            } catch (IOException e) {
+                throw new IllegalStateException("Failed to save avatar", e);
+            }
+        });
+    }
+
     public void deleteAvatar(UUID id) {
         researcherRepository.find(id).ifPresent(researcher -> {
-            researcher.setAvatar(null);
-            researcherRepository.update(researcher);
+            if (researcher.getAvatarPath() != null) {
+                Path filePath = avatarDirectory.resolve(researcher.getAvatarPath());
+                try {
+                    Files.deleteIfExists(filePath);
+                } catch (IOException e) {
+                    throw new IllegalStateException("Failed to delete avatar", e);
+                }
+                researcher.setAvatarPath(null);
+                researcherRepository.update(researcher);
+            }
         });
     }
 }
